# storefront

./: README.md  pyproject.toml
likes/migrations/: 0001_initial.py
playground/: views.py
playground/templates/: hello.html
store/: models.py
store/migrations/: 0001_initial.py  0002_add_slug_to_product.py  0003_address.py  0004_address_zip.py
storefront/: settings.py  urls.py
tags/migrations/: 0001_initial.py
