[tool.poetry]
name = "django-tut"
version = "0.1.0"
description = ""
authors = ["sean.brackenborough <sean.brackenborough.dev@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
mysqlclient = "^2.2.4"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
